# linux_cp_command

./: CMakeLists.txt  Jenkinsfile  README.md  scaterGatherIO.c
src/: copy.c  helloworld.c  scaterGatherIO.c
